--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.11, <4"
 dependencies = [
     "django (==4.2.24)",
     "psycopg2 (>=2.9.10,<3.0.0)",
-    "django-environ (>=0.12.0,<0.13.0)"
+    "django-environ (>=0.12.0,<0.13.0)",
+    "django-ninja (>=1.4.3,<2.0.0)"
 ]
 
 
